# src/routers/index.js
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 import authRouter from './auth.js';
+import categoriesRouter from './categories.js';
 
 const router = new Router();
 
@@ -7,7 +8,7 @@ router.use('/api/auth', authRouter);
 
 // router.use('/api/users');
 
-// router.use('/api/categories');
+router.use('/api/categories', categoriesRouter);
 
 // router.use('/api/ingredients');
 
